# mesospim-fractal-tasks

./: .copier-answers.yml  .gitignore  404.html  LICENSE  README.md  environment.yml  environment_dev.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build_and_test.yml  docs.yml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  index.md  installation.md
docs/tasks/: archive_or_dearchive_omezarr.md  correct_flatfield.md  correct_illumination.md  crop_regions_of_interest.md  flatfield.md  fuse_views_or_channels.md  global_optim.md  mesospim_to_omezarr.md  modify_omezarr_structure.md  prepare_mesospim_omezarr.md  stitch_with_multiview_stitcher.md  stitching.md
docs/usage/: fractal_integration.md  index.md  local_run.md
installation/: index.html
search/: search_index.json
src/mesospim_fractal_tasks/: __FRACTAL_MANIFEST__.json  __init__.py
src/mesospim_fractal_tasks/cli/: copy_templates.py  manage_templates.py
src/mesospim_fractal_tasks/dev/: task_list.py
src/mesospim_fractal_tasks/settings/: channel_color_default.json  channel_color_irchel.json  channel_color_template.json  channel_color_v0.json  channel_color_zmb.json  settings_manager.py
src/mesospim_fractal_tasks/tasks/: archive_or_dearchive_omezarr.py  correct_flatfield.py  correct_flatfield_dask.py  correct_flatfield_parallel.py  correct_illumination.py  correct_illumination_dask.py  crop_regions_of_interest.py  crop_regions_of_interest_dask.py  fuse_views_or_channels.py  init_correct_flatfield.py  init_correct_illumination.py  init_crop_regions_of_interest.py  (+4 more)
tasks/archive_or_dearchive_omezarr/: index.html
tasks/correct_flatfield/: index.html
tasks/correct_illumination/: index.html
tasks/crop_regions_of_interest/: index.html
tasks/fuse_views_or_channels/: index.html
tasks/mesospim_to_omezarr/: index.html
tasks/modify_omezarr_structure/: index.html
tasks/prepare_mesospim_omezarr/: index.html
tasks/stitch_with_multiview_stitcher/: index.html
tests/: __init__.py  conftest.py  test_valid_args_schemas.py  test_valid_manifest.py
tests/data/: example.raw_meta.txt  example.tiff_meta.txt  example_640.tif  multitile_example.h5  multitile_example.h5_meta.txt
tests/integration/: test_correct_flatfield_int.py  test_correct_illumination_int.py  test_init_correct_flatfield_int.py  test_init_correct_illumination_int.py  test_mesospim_to_omezarr_int.py
tests/unit/: test_correct_flatfield_unit.py  test_correct_illumination_unit.py  test_init_correct_flatfield_unit.py  test_init_correct_illumination_unit.py  test_init_crop_region_of_interest_unit.py  test_mesospim_to_omezarr_unit.py
usage/: index.html
usage/fractal_integration/: index.html
usage/local_run/: index.html
(+18 files in other folders)
