# https://peps.python.org/pep-0517/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://hatch.pypa.io/latest/config/metadata/
[tool.hatch.version]
source = "vcs"

# read more about configuring hatch at:
# https://hatch.pypa.io/latest/config/build/

[tool.hatch.build.targets.wheel]
packages = ["src/mesospim_fractal_tasks"]

[tool.hatch.build]
exclude = [
    "Data",
    "docs",
    "examples",
    ".git",
    ".venv",
    "build",
    "dist",
    "*.zarr",
    "*.tif",
    "*.h5",
    "*.npz",
    "*.npy",
    "*.tiff",
    "*.png",
    "*.jpg",
    "*.jpeg",
    "*.mp4",
    "*.mov",
]

# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "mesopsim-fractal-tasks"
dynamic = ["version"]
description = "Collection of Fractal tasks to convert and process mesoSPIM lightsheet data."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Giliane Rochat", email = "giliane.rochat@usz.ch" },
]

# Required Python version and dependencies
requires-python = ">=3.11"
dependencies = [
    "ngio>=0.2.1", 
    "scikit-image", 
    "scipy",
    "zarr<3",
    "pandas",
    "numpy", 
    "fractal-task-tools", 
    "fractal-tasks-core",
    "multiview-stitcher==0.1.40",
    "anndata",
    "h5py",
    "tifffile",
    "dask<=2025.10.0",
    "imagecodecs",
    "napari[all]",
    "napari-ome-zarr-navigator"]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "hatch", "pytest", "requests", "jsonschema", "ruff", "pre-commit"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
    "D415", # First line should end with a period (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89
skip-magic-trailing-comma = false  # default is false